[package]
name = "engage"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
skyline = { git = "https://github.com/Raytwo/skyline-rs", branch = "preview" }
unity = { version = "0.3.0", git = "https://github.com/DivineDragonFanClub/unity" }
modular-bitfield = "0.11.2"
once_cell = "1.17.0"
bitflags = "2.4.0"
lazysimd = { git = "https://github.com/Raytwo/lazysimd" }
clap = { version = "4.5.45", features = ["derive"] }

[patch."https://github.com/DivineDragonFanClub/unity"]
unity = { path = "/Users/trile/Project/unity"}